src/objects/Executive_Business_Case__c.object
<CustomObject>
    <description>EBC - This custom object stores all concepts and EBCs for the EBC tracker application</description>
    <fields>
        <fullName>Abstract__c</fullName>
        <inlineHelpText>Provide a summary of the Executive Business Case</inlineHelpText>
        <label>Project Statement Abstract</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Associated_Project_Code__c</fullName>
        <inlineHelpText>Enter the project code which the OCFO team can attribute the approved new, revised or increased funding to a line item in FPA. Enter &quot;N/A&quot; if EBC is not funded or rejected.</inlineHelpText>
        <label>Associated Project Code</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRG_Comments__c</fullName>
        <inlineHelpText>Record Comments from BRG Review.  BRG Comments or Recommendations are required if a BRG Review Date is entered. The BRG Review is part of the Governance Review process.</inlineHelpText>
        <label>EBC - BRG Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRG_Recommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the BRG Review. BRG Comments or Recommendations are required if an BRG Review Date is entered.</inlineHelpText>
        <label>EBC - BRG Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BRG_Review_Date__c</fullName>
        <inlineHelpText>Populate this field with the date of the BRG Review. BRG Comments or Recommendations are required if an IRB Review Date is enteredEither select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>EBC - BRG Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CFO_Comments__c</fullName>
        <description>Updated label to &apos;EBC - CFO Comments&apos;</description>
        <inlineHelpText>Record Comments from CFO Review.This is required if a CFO Review date is entered. The CFO Review is part of the Quality Review process</inlineHelpText>
        <label>EBC - CFO Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CFO_Review_Date__c</fullName>
        <description>Changing the label to &apos;EBC - CFO Review Date&apos; from &apos;CFO Review Date&apos;</description>
        <inlineHelpText>Populate this field with the date of the CFO Review. This is required if a CFO comment is entered. Either select from the Date Picker or key in the date directly into the fields. The format is MM/DD/YYYY</inlineHelpText>
        <label>EBC - CFO Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConceptApproved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines if Part - I of the EBC, i.e. the Concept Phase has been approved or not</inlineHelpText>
        <label>Concept Approved?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ConceptBRGComments__c</fullName>
        <inlineHelpText>Record Comments from BRG Review.  BRG Comments or Recommendations are required if a BRG Review Date is entered. The BRG Review is part of the Governance Review process.</inlineHelpText>
        <label>Concept - BRG Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptBRGRecommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the BRG Review. BRG Comments or Recommendations are required if an BRG Review Date is entered.</inlineHelpText>
        <label>Concept - BRG Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptBRGReviewDate__c</fullName>
        <inlineHelpText>Populate this field with the date of the BRG Review. BRG Comments or Recommendations are required if an IRB Review Date is enteredEither select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>Concept - BRG Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConceptCFOComments__c</fullName>
        <inlineHelpText>Record Comments from CFO Review. This is required if a CFO Review date is entered. The CFO Review is part of the Quality Review process</inlineHelpText>
        <label>Concept - CFO Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptCFOReviewDate__c</fullName>
        <inlineHelpText>Populate this field with the date of the CFO Review of the concept. This is required if a CFO comment is entered. Either select from the Date Picker or key in the date directly into the fields. The format is MM/DD/YYYY</inlineHelpText>
        <label>Concept - CFO Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConceptGSAITComments__c</fullName>
        <inlineHelpText>Record Comments from System Architecture Review. GSA IT Comments or Recommendations are required if GSA IT Review Date is entered. The GSA IT Review is part of the Internal Review process.</inlineHelpText>
        <label>Concept - GSA IT Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptGSAITRecommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the GSA IT Review. GSA IT Comments or Recommendations are required if GSA IT Review Date is entered.</inlineHelpText>
        <label>Concept - GSA IT Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptGSAITReviewCompletedDate__c</fullName>
        <inlineHelpText>Populate this field with the date of the System Architecture Review. This is required if SA Comments or Recommendations are entered. Either select from the Date Picker or key in the date directly into the fields. The format is MM/DD/YYYY</inlineHelpText>
        <label>Concept - GSA IT Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConceptHighestReview__c</fullName>
        <inlineHelpText>Enter the highest review required for this Concept Phase; it will be either CFO, BRG, PAB or IRB</inlineHelpText>
        <label>Concept - Highest Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>BRG</fullName>
                </value>
                <value>
                    <fullName>PAB</fullName>
                </value>
                <value>
                    <fullName>IRB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ConceptIRBComments__c</fullName>
        <inlineHelpText>Record Comments from IRB Review. IRB Comments or Recommendations are required if an IRB Review Date is entered. The IRB Review is part of the Governance Review process.</inlineHelpText>
        <label>Concept - IRB Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptIRBRecommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the IRB Review. IRB Comments or Recommendations are required if an IRB Review Date is entered.</inlineHelpText>
        <label>Concept - IRB Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptIRBReviewDate__c</fullName>
        <inlineHelpText>Populate this field with the date of the IRB Review. This is required if IRB Comments or Recommendations are entered. Either select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>Concept - IRB Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConceptPABComments__c</fullName>
        <inlineHelpText>Record Comments from PAB Review.  PAB Comments or Recommendations are required if a PAB Review Date is entered. The PAB Review is part of the Governance Review process</inlineHelpText>
        <label>Concept - PAB Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptPABRecommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the PAB Review. PAB Comments or Recommendations are required if a PAB Review Date is entered. The PAB Review is part of the Governance Review process.</inlineHelpText>
        <label>Concept - PAB Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ConceptPABReviewDate__c</fullName>
        <inlineHelpText>Populate this field with the date of the PAB Review. IRB Comments or Recommendations are required if an IRB Review Date is enteredEither select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>Concept - PAB Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ConvertedFromRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Determines whether or not this EBC was converted from a request from Project 360 app.</inlineHelpText>
        <label>Converted From Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Enter a description for this Executive Business Case</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_Comments__c</fullName>
        <inlineHelpText>Record Comments from Enterprise Architecture Review. EARC Comments or Recommendations are required if an EARC Review Date is entered. The EARC Review is part of the Internal Review process</inlineHelpText>
        <label>EBC - EARC Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_Recommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the EARC Review. EARC Comments or Recommendations are required if an EARC Review Date is entered</inlineHelpText>
        <label>EBC - EARC Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EA_Review_Completed_Date__c</fullName>
        <inlineHelpText>Populate this field with the date of the Enterprise Architecture Review. This is required if EA Comments or Recommendations are entered. Either select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>EBC - EARC Review Completed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Executive_Sponsor_Delegate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>First select the User Type and then the User name then enter the name of the Executive Sponsor or their Delegate, for this Executive Business Case. You can enter the name in directly or use the lookup feature to search for and then select the name</inlineHelpText>
        <label>Executive Sponsor/Delegate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Executive_Business_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>File_Attached__c</fullName>
        <inlineHelpText>Choose &apos;Attached&apos; only when Part-II of the EBC Request Template is completed and uploaded to this EBC</inlineHelpText>
        <label>EBC Attachment Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Attached</fullName>
                    <default>true</default>
                    <label>Not Attached</label>
                </value>
                <value>
                    <fullName>Attached</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fiscal_Year__c</fullName>
        <inlineHelpText>Enter the base Fiscal Year for this Business Case</inlineHelpText>
        <label>Fiscal Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2015</fullName>
                </value>
                <value>
                    <fullName>2016</fullName>
                </value>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Funded_Amount_1st_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a CFO Approver, you should enter the amount for first fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount funded for 2016</inlineHelpText>
        <label>Funded Amount 1st Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Amount_2nd_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a CFO Approver, you should enter the amount for second fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount funded for 2017</inlineHelpText>
        <label>Funded Amount 2nd Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Amount_3rd_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a CFO Approver, you should enter the amount for third fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount funded for 2018</inlineHelpText>
        <label>Funded Amount 3rd Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Amount_4th_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a CFO Approver, you should enter the amount for fourth fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount funded for 2019</inlineHelpText>
        <label>Funded Amount 4th Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Amount_5th_Fiscal_Year__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>As a CFO Approver, you should enter the amount for fifth fiscal year of the approval period. For example if your stated Fiscal Year is 2016, then this field should hold the amount funded for 2020</inlineHelpText>
        <label>Funded Amount 5th Fiscal Year</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funded_Total_Amount_5_Years__c</fullName>
        <formula>Funded_Amount_1st_Fiscal_Year__c +  Funded_Amount_2nd_Fiscal_Year__c + Funded_Amount_3rd_Fiscal_Year__c + Funded_Amount_4th_Fiscal_Year__c + Funded_Amount_5th_Fiscal_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Funded Total Amount 5 Years</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Comments__c</fullName>
        <label>Funding Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Highest_Review__c</fullName>
        <inlineHelpText>Enter the highest review required for this EBC Phase; it will be either CFO, BRG, PAB or IRB</inlineHelpText>
        <label>EBC - Highest Review</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CFO</fullName>
                </value>
                <value>
                    <fullName>BRG</fullName>
                </value>
                <value>
                    <fullName>PAB</fullName>
                </value>
                <value>
                    <fullName>IRB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>IRB_Comments__c</fullName>
        <inlineHelpText>Record Comments from IRB Review. IRB Comments or Recommendations are required if an IRB Review Date is entered. The IRB Review is part of the Governance Review process.</inlineHelpText>
        <label>EBC - IRB Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IRB_Priority_Score__c</fullName>
        <inlineHelpText>Use this field to record the Prioritization Score from the IRB Review</inlineHelpText>
        <label>EBC - IRB Priority Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IRB_Recommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the IRB Review. IRB Comments or Recommendations are required if an IRB Review Date is entered.</inlineHelpText>
        <label>EBC - IRB Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IRB_Review_Date__c</fullName>
        <inlineHelpText>Populate this field with the date of the IRB Review. This is required if IRB Comments or Recommendations are entered. Either select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>EBC - IRB Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IRB_Review_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This field will indicate if an IRB Review is required.</inlineHelpText>
        <label>EBC - IRB Review Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <defaultValue>&quot;Please add attachments using the Chatter feed &apos;file&apos; option at the top.  Do NOT use the &apos;upload files&apos; button below as this will cause an error. Only PDF&apos;s, Doc&apos;s and Xls files will be allowed.&quot;</defaultValue>
        <inlineHelpText>Files are to be attached via the Chatter feed, NOT the &quot;Upload Files&quot; option at the bottom of the page.</inlineHelpText>
        <label>Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Investment_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Choose an Investment name related to the Amendment or Major Enhancement</inlineHelpText>
        <label>Original EBC</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Executive_Business_Case__c.Request_Type__c</field>
                <operation>notEqual</operation>
                <value>Amendment</value>
            </filterItems>
            <filterItems>
                <field>Executive_Business_Case__c.Request_Type__c</field>
                <operation>notEqual</operation>
                <value>Major Enhancement</value>
            </filterItems>
            <filterItems>
                <field>Executive_Business_Case__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <filterItems>
                <field>Executive_Business_Case__c.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Concept Initial, Concept Review</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Executive_Business_Case__c</referenceTo>
        <relationshipLabel>Amendments/Major Enhancements</relationshipLabel>
        <relationshipName>Executive_Business_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Concept_Attached__c</fullName>
        <inlineHelpText>Choose &apos;Attached&apos; only when Part-I of the EBC Request Template is completed and uploaded to this EBC.</inlineHelpText>
        <label>Concept Attachment Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attached</fullName>
                </value>
                <value>
                    <fullName>Not Attached</fullName>
                    <default>true</default>
                    <label>Not Attached</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_it_a_Major_Investment__c</fullName>
        <inlineHelpText>&quot;A major investment requires special management attention because of the initiative’s importance to agency mission&quot;.</inlineHelpText>
        <label>Is this an existing CPIC investment?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Major_IT_Investments__c</fullName>
        <description>&quot;A major investment requires special management attention because of the initiative’s importance to agency mission&quot;.</description>
        <label>Existing IT Investments</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Is_it_a_Major_Investment__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Acquisition Gateway</fullName>
                </value>
                <value>
                    <fullName>Analytics Service Platform</fullName>
                </value>
                <value>
                    <fullName>Assisted Services Shared Information SysTem (ASSIST)</fullName>
                </value>
                <value>
                    <fullName>cloud.gov</fullName>
                </value>
                <value>
                    <fullName>consumer identity platform</fullName>
                </value>
                <value>
                    <fullName>Contract Writing System (CWS)</fullName>
                </value>
                <value>
                    <fullName>D2D</fullName>
                </value>
                <value>
                    <fullName>Federal PKI Bridge</fullName>
                </value>
                <value>
                    <fullName>Federal Real Property Asset Management</fullName>
                </value>
                <value>
                    <fullName>Federal Supply Service 19 (FSS-19)</fullName>
                </value>
                <value>
                    <fullName>GSA Advantage</fullName>
                </value>
                <value>
                    <fullName>GSA Conexus</fullName>
                </value>
                <value>
                    <fullName>GSA Real Estate Exchange (G-REX)</fullName>
                </value>
                <value>
                    <fullName>Human Capital Information Technology Services</fullName>
                </value>
                <value>
                    <fullName>Integrated Award Environment (IAE)</fullName>
                </value>
                <value>
                    <fullName>Network Hosting Center (NHC)</fullName>
                </value>
                <value>
                    <fullName>Network Services Ordering &amp; Billing System (NSOBS)</fullName>
                </value>
                <value>
                    <fullName>Order Management Service (OMS)</fullName>
                </value>
                <value>
                    <fullName>Real Estate Across the US (REXUS)</fullName>
                </value>
                <value>
                    <fullName>Regulatory Information Service Center (ROCIS II)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_IT_IT_Help__c</fullName>
        <defaultValue>&quot;IT Investment means the expenditure of IT resources to accomplish mission objectives. An IT investment may include a project or projects for the development, modernization, enhancement, or maintenance of a single IT asset or group of IT assets with related functionality and the subsequent operation of those assets in a production environment. Examples of Non-IT investments include project management offices (PMO), hiring full time employees (FTE), contractual payments, etc.&quot;</defaultValue>
        <label>Request Classification Help</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Non_IT_IT__c</fullName>
        <inlineHelpText>Use this field to designate whether this Executive Business Case will require the IT related reviews</inlineHelpText>
        <label>Request Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Non-IT</fullName>
                </value>
                <value>
                    <fullName>IT</fullName>
                </value>
                <value>
                    <fullName>Both IT and Non-IT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrgID__c</fullName>
        <formula>$Organization.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OrgID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_EBC__c</fullName>
        <inlineHelpText>EBC&apos;s prior to FY 16 will not be in the original EBC list. Please write in the Original EBC</inlineHelpText>
        <label>Other EBC</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAB_Comments__c</fullName>
        <inlineHelpText>Record Comments from PAB Review.  PAB Comments or Recommendations are required if a PAB Review Date is entered. The PAB Review is part of the Governance Review process</inlineHelpText>
        <label>EBC - PAB Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAB_Priority_Score__c</fullName>
        <inlineHelpText>Use this field to record the Prioritization Score from the PAB Review</inlineHelpText>
        <label>EBC - PAB Priority Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PAB_Recommendations__c</fullName>
        <inlineHelpText>Record the recommendations made in the PAB Review. PAB Comments or Recommendations are required if a PAB Review Date is entered. The PAB Review is part of the Governance Review process.</inlineHelpText>
        <label>EBC - PAB Recommendations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PAB_Review_Date__c</fullName>
        <inlineHelpText>Populate this field with the date of the PAB Review. IRB Comments or Recommendations are required if an IRB Review Date is enteredEither select from the Date Picker or key in the date directly into the fields, The format is MM/DD/YYYY</inlineHelpText>
        <label>EBC - PAB Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Phase__c</fullName>
        <formula>IF( CONTAINS (RecordType.Name, &apos;Concept&apos;) , &apos;Concept&apos;, &apos;EBC&apos;)</formula>
        <label>Phase</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio__c</fullName>
        <inlineHelpText>Enter the Service of Staff Office (SSO) for this Business Case</inlineHelpText>
        <label>Service of Staff Office (SSO)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A - Office of the Administrator</fullName>
                </value>
                <value>
                    <fullName>AK - Office of Civil Rights</fullName>
                </value>
                <value>
                    <fullName>B - Office of the Chief Financial Officer</fullName>
                </value>
                <value>
                    <fullName>C - Office of the Human Resource Management</fullName>
                </value>
                <value>
                    <fullName>D - Office of Mission Assurance</fullName>
                </value>
                <value>
                    <fullName>E - Office of Small Business Utilization</fullName>
                </value>
                <value>
                    <fullName>G - Civilian Board of Contract Appeals</fullName>
                </value>
                <value>
                    <fullName>H - Office of Administrative Services</fullName>
                </value>
                <value>
                    <fullName>J - Office of the Inspector General</fullName>
                </value>
                <value>
                    <fullName>L - Office of the General Counsel</fullName>
                </value>
                <value>
                    <fullName>M - Office of Governmentwide Policy</fullName>
                </value>
                <value>
                    <fullName>P - Public Buildings Service</fullName>
                </value>
                <value>
                    <fullName>Q - Federal Acquisition Service</fullName>
                </value>
                <value>
                    <fullName>S - Office of Congressional &amp; Intergovernental Affairs</fullName>
                </value>
                <value>
                    <fullName>X - Office of Citizen Services &amp; Innovation Technologies</fullName>
                </value>
                <value>
                    <fullName>Z - Office of Communications and Marketing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>